fix #195 (PR #197)
fix issue with solution resutls tables not showing values

--- a/inst/app/www/solution-results-modal.css
+++ b/inst/app/www/solution-results-modal.css
@@ -48,3 +48,7 @@
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
+
+.solution-results-modal .dataTables_scrollBody {
+  height: clamp(300px, calc(100vh - 295px), 10000px) !important;
+}
